refactor: improve follow functionality implementation
- Refactor CustomFollowRepositoryImpl query logic
- Update FollowController response handling
- Enhance FollowServiceImpl business logic
- Update Follow and User entity relationships
- Add error codes for follow operations
- Update TokenVersionCacheService